--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <li> FIGMA</li>
         <li>  REDES</li>
         <li> JAVA</li>
-        <li> BASES D DATOS</li>
+        <li> BASES DE DATOS</li>
         <li> SE LAVAR CARROS</li>
      </ul>
 </section>
@@ -61,4 +61,5 @@
 
 
     </body>
+
 </html>
