--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="container">
 <header>
 <img src="imagenes/Felipe.jpeg" alt="Mi foto" class="profile-pic">
-<h1>Felipe carmona garcia</h1>
+<h1>Felipe Carmona Garcia</h1>
 <p> Desarrollador movil junior</p>
 </header>
 <div class="print-button-container">
@@ -63,3 +63,4 @@
     </body>
 
 </html>
+
